--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Open Smart Desk</title>
+  <title>Open Smart Height Adjustable Desk</title>
 </head>
 <body>
-  <h1>Open Smart Desk</h1>
+  <h1>Project: Open Smart Height Adjustable Desk</h1>
+  <h2>About the Project</h2>
+  <p>Open Smart Height Adjustable Desk is an innovative concept of a desk with height adjustment, equipped with motion sensors. The desk is designed to measure the time the user spends in front of the computer. Based on the data from the motion sensor, the desk can either suggest a break or raise itself, encouraging the user to work while standing.</p>
+  <h2>Goals and Challenges</h2>
+  <h3>Creating a Seamless and Engaging User Experience</h3>
+  <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
+  <h3>Building a Business Model and Implementing the Solution in the Market</h3>
+  <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>
+  <h2>Mission</h2>
+  <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3>
+  <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem.</p>
+  <h2>Become a Part of the Working Group!</h2>
+  <p>If you are interested in developing this project, I invite youto join the working group! I have built a prototype of the device that measures time, controls the motors, and has a physical interface (buttons and display). I want to share it so that you can experiment and develop the project with me. Therefore, I provide the hardware project, software, and 3D elements for the casing.</p>
+  <p>I also invite you to join our Discord group, where we can develop this project together.</p>
 </body>
 </html>
