--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
-  <div class="jumbotron jumbotron-fluid text-center" style="background-color: #f8f9fa;">
+  <div class="jumbotron jumbotron-fluid text-center" style="background-color: #f8f9fa; border-bottom: 1px solid #eee;">
     <div class="container py-5">
       <div class="row">
         <h1 class="display-6" style="font-size: 180%">Public Research & Development Project</h1>
@@ -29,11 +29,16 @@
     </div>
   </div>
   
-  
-  <main class="container mb-5">
+  <main class="container my-5">
     <section class="container py-2">
       <h2>About the Project</h2>
       <p>Open Smart Height Adjustable Desk is an innovative concept of a desk with height adjustment, equipped with motion sensors. The desk is designed to measure the time the user spends in front of the computer. Based on the data from the motion sensor, the desk can either suggest a break or raise itself, encouraging the user to work while standing.</p>
+    </section>
+    <section class="container py-2">
+      <h2>Mission</h2>
+      <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3>
+      <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem.</p>
+      <h3></h3>
     </section>
     <section class="container py-2">
       <h2>Goals and Challenges</h2>
@@ -43,45 +48,88 @@
       <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
     </section>
     <section class="container py-2">
-      <h2>Mission</h2>
-      <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3>
-      <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem.</p>
-    </section>
-    <section class="container py-2">
       <h2>Become a Part of the Working Group!</h2>
       <p>If you are interested in developing this project, I invite youto join the working group! I have built a prototype of the device that measures time, controls the motors, and has a physical interface (buttons and display). I want to share it so that you can experiment and develop the project with me. Therefore, I provide the hardware project, software, and 3D elements for the casing.</p>
       <p>I also invite you to <a href="https://discord.gg/7s7P9Kga">join our Discord group</a>, where we can develop this project together.</p>
     </section>
     <section class="container py-2">
-      <h2>Hardware v1</h2>
-      <p> RPi4 + relay board + plexi laser cutted enclousure</p>
-      <h3>Photos gallery</h3>
+      <h2>Hardware</h2>
+      <p>RPi4 + 4 relays board + PIR + laser range sensor + plexi laser cutted enclousure</p>
+      <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <i class="bi bi-gear"></i> Show detailed parts list
+      </a>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          <ul style="list-style-type: square;">
+            <li><a href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/?variant=raspberry-pi-4-model-b-4gb">Raspbery Pi 4 model B (4GB)</a></li>
+            <li><a href="https://www.waveshare.com/rpi-relay-board.htm">Waveshare RPi Relay Board (11638)</a></li>
+            <li><a href="https://www.amazon.com/Gowoops-VL53L0X-Breakout-GY-VL53L0XV2-Distance/dp/B07F3RH7TC/">Laser metter VL53L0X</a></li>
+            <li><a href="https://components101.com/hc-sr501-pir-sensor">Motion sensor PIR HC-SR501</a></li>
+            <li><a href="https://www.reichelt.com/pl/en/power-supply-5-v-6-a-eps-35-5-p170940.html">Power supply EPS-35-5 (5V, 6A)</a></li>
+            <li><a href="https://www.tme.eu/pl/en/details/sp2112_s4/weipu-connectors/weipu/">SP2112/S4 female panel socket</a></li>
+            <li><a href="https://www.tme.eu/pl/en/details/sp2110_p4/weipu-connectors/weipu/sp2110-p4-ii-1n/">SP2110/P4II male plug</a></li>
+            <li><a href="https://allegro.pl/oferta/nakretka-nakretki-niska-czarna-oksyda-m3-10szt-6904944393">4x low nut M3 (black, oxidized, 3mm height)</a></li>
+            <li><a href="https://allegro.pl/oferta/sruba-kulista-czarna-m3x8-gniazdo-imbus-10szt-5315915867">6x spherical screw M3x8 (black, hex socket)</a></li>
+            <li>C14 male panel socket</li>
+            <li>C13 female cable (regular PC power cable)</li>
+            <li>microSD card 32GB</li>
+            <li>plexi laser cutted enclousre</li>
+          </ul>
+        </div>
+      </div>
+      <h3>Control Unit</h3>
+      <h4>v0.1</h4>
       <div class="row">
         <div class="col">
           <img src="images/plexi-cutted.jpg" class="img-fluid" alt="Plexi Cutted">
+          <p class="small">Ordered online, CNC laser cutted plexiglass 4mm for the housing.</p>
         </div>
         <div class="col">
           <img src="images/wiring.jpg" class="img-fluid" alt="Wiring">
+          <p class="small">First assembly of Control Unit...</p>
         </div>
         <div class="col">
           <img src="images/wiring-explained.jpg" class="img-fluid" alt="Wiring Explained">
+          <p class="small">...described what's inside.</p>
         </div>
       </div>
-      <h3>Parts list</h3>
+      <p>I don't recommend this housing design. No air flow provided, so electronics is overheating. Must be redesigned.
+      </p>
+      <h4>v0.1.1</h4>
+      <p>In this version I just replaced power supply with smaller one. <!-- TODO add info about model & link --></p>
+      <div class="row">
+        <div class="col">
+          <img src="images/20230628_032916.jpg" class="img-fluid" alt="Control Unit">
+          <p class="small">Control Unit</p>
+        </div>
+        <div class="col">
+          <img src="images/20230628_033107.jpg" class="img-fluid" alt="4-pin plug and socket for motor control">
+          <p class="small">4-pin plug and socket for motor control (+230V UP, +230V DOWN, Neutral, GND)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="images/20230628_033525.jpg" class="img-fluid" alt="Control Unit with PIR sensor (movement detector)">
+          <p class="small">Control Unit with PIR sensor (movement detector)</p>
+        </div>
+        <div class="col">
+          <img src="images/20230628_033548.jpg" class="img-fluid" alt="Inside of control unit (v2 with smaller power supply)">
+          <p class="small">Inside of control unit (v2 with smaller power supply)</p>
+        </div>
+      </div>
+      <p>In next version I plan to replace PRi4 with RPi0. I am just not sure if VS Studio SSH Remote will support it.</p>
+      <h3>User Panel</h3>
+      <p>I have never finished this component. Elements doesn't fit enclosure - not enough space to connect electronic components together. PCB and 3D printed enclosure are required remodeling.</p>      
+      <div class="row">
+        <div class="col"><img src="images/20230628_033806.jpg" class="img-fluid" alt="User Panel"></div>
+        <div class="col"><img src="images/20230628_043425.jpg" class="img-fluid" alt="User Panel"></div>
+      </div>
+      <p>Netherless I have planned to use:</p>
       <ul>
-        <li><a href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/?variant=raspberry-pi-4-model-b-4gb">Raspbery Pi 4 model B (4GB)</a></li>
-        <li><a href="https://www.waveshare.com/rpi-relay-board.htm">Waveshare RPi Relay Board (11638)</a></li>
-        <li><a href="https://www.amazon.com/Gowoops-VL53L0X-Breakout-GY-VL53L0XV2-Distance/dp/B07F3RH7TC/">Laser metter VL53L0X</a></li>
-        <li><a href="https://components101.com/hc-sr501-pir-sensor">Motion sensor PIR HC-SR501</a></li>
-        <li><a href="https://www.reichelt.com/pl/en/power-supply-5-v-6-a-eps-35-5-p170940.html">Power supply EPS-35-5 (5V, 6A)</a></li>
-        <li><a href="https://www.tme.eu/pl/en/details/sp2112_s4/weipu-connectors/weipu/">SP2112/S4 female panel socket</a></li>
-        <li><a href="https://www.tme.eu/pl/en/details/sp2110_p4/weipu-connectors/weipu/sp2110-p4-ii-1n/">SP2110/P4II male plug</a></li>
-        <li><a href="https://allegro.pl/oferta/nakretka-nakretki-niska-czarna-oksyda-m3-10szt-6904944393">4x low nut M3 (black, oxidized, 3mm height)</a></li>
-        <li><a href="https://allegro.pl/oferta/sruba-kulista-czarna-m3x8-gniazdo-imbus-10szt-5315915867">6x spherical screw M3x8 (black, hex socket)</a></li>
-        <li>C14 male panel socket</li>
-        <li>C13 female cable (regular PC power cable)</li>
-        <li>microSD card 32GB</li>
-        <li>plexi laser cutted enclousre</li>
+        <li>ATMega / ATTiny as microcontroller that will send and receive commands from RPi via USB-UART</li>
+        <li>shft register to handle 7-segment display, that would show some simple messages (eg. <code>err</code>) and current height</li>
+        <li>4 buttons: <code>UP</code>, <code>DOWN</code>, <code>MEM 1</code> & <code>MEM 2</code></li>
+        <li>buzzer (not on the photo)</li>
       </ul>
     </section>
     <section class="container py-2">
@@ -91,7 +139,7 @@
     </section>
   </main>
 
-  <footer class="jumbotron jumbotron-fluid text-center" style="background-color: #aaa;">
+  <footer class="jumbotron jumbotron-fluid text-center" style="background: #ddd; border-top: 1px solid #ccc;">
     <div class="container py-4 hstack gap-3">
       <p class="mb-0" style="font-size: 0.85rem;">
         &copy; Paweł Żentała 2023
