--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="display-4">Open Smart Height Adjustable Desk</h1>
       </div>
       <div class="row justify-content-center ">
-        <p class="lead col-lg-8 ">An innovative, sensor-equipped desk that adjusts its height based on the user's time spent in front of the computer. It can suggest breaks or raise itself to encourage standing work.</p>
+        <p class="lead col-lg-7 ">An innovative, <strong>sensor-equipped</strong> desk that adjusts its height based on the user's time spent in front of the computer. It <strong>can suggest breaks or raise itself autonomously</strong> to encourage standing work.</p>
       </div>
       <div class="row">
         <div class="col">
