Extend mission and parts list

--- a/index.html
+++ b/index.html
@@ -35,26 +35,16 @@
   
   <main class="container my-5">
     <section class="container py-2">
-      <h2>About the Project</h2>
-      <p>Open Smart Height Adjustable Desk is an innovative concept of a desk with height adjustment, equipped with motion sensors. The desk is designed to measure the time the user spends in front of the computer. Based on the data from the motion sensor, the desk can either suggest a break or raise itself, encouraging the user to work while standing.</p>
-    </section>
-    <section class="container py-2">
-      <h2>Mission</h2>
-      <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3>
-      <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem.</p>
-      <h3></h3>
-    </section>
-    <section class="container py-2">
-      <h2>Goals and Challenges</h2>
-      <h3>Creating a Seamless and Engaging User Experience</h3>
-      <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
-      <h3>Building a Business Model and Implementing the Solution in the Market</h3>
-      <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
-    </section>
-    <section class="container py-2">
-      <h2>Become a Part of the Working Group!</h2>
-      <p>If you are interested in developing this project, I invite youto join the working group! I have built a prototype of the device that measures time, controls the motors, and has a physical interface (buttons and display). I want to share it so that you can experiment and develop the project with me. Therefore, I provide the hardware project, software, and 3D elements for the casing.</p>
-      <p>I also invite you to <a href="https://discord.gg/7s7P9Kga">join our Discord group</a>, where we can develop this project together.</p>
+      <h3>Mission: Addressing Sedentary Lifestyle - A Health Imperative</h3>
+      <p>In the modern world, an increasing number of people are working remotely, spending their work hours in front of a computer. After work, they continue to use computers for shopping, handling administrative matters, and entertainment. Many of us, especially during the COVID-19 pandemic, have experienced spending the entire day in front of a screen, from the moment we wake up until we go to bed. This lifestyle, if unchecked, can lead to health issues.</p>
+      <p>A sedentary lifestyle can lead to serious health problems, including spinal and joint diseases, resulting in mobility issues. These civilization diseases not only generate significant costs for the global economy but also cause tremendous inconvenience for those affected.</p>
+      <p>Height-adjustable desks were theoretically designed to combat the sedentary lifestyle. However, in practice, many of us don't utilize them to their full potential. We often forget or lack the motivation to change positions, enduring the discomfort that comes with it. This realization inspired the idea for the Open Smart Desk.</p>
+      <p>This project was initiated to change that. The goal is to develop smart features that monitor our presence and desk height, in order to motivate us to lead a healthier lifestyle. This is intended to achieved through a gamification system that makes the process engaging and fun.</p>
+      <p>The dream is to create a communication and control system for the desk that makes daily position changes in front of the computer a pleasant, natural, and non-invasive experience. The hope is that one day, the solutions developed here will become widespread worldwide, helping to ward off the specter of civilization diseases for millions of intellectual workers.</p>
+      <!-- <h2>Mission</h2> -->
+      <!-- <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3> -->
+      <!-- <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem. </p> -->
+      <!-- <p>Theoretically, height-adjustable desks were designed to address the problem of a sedentary lifestyle. However, in practice, most of us don't use them - we forget or lack the motivation to endure the discomfort of changing positions. I initiated this project to develop smart features that will monitor our posture and motivate us to lead a healthier lifestyle through a gamification system. I dream of creating a communication and control system for the desk that makes daily position changes in front of the computer pleasant, natural, and non-invasive. I hope that one day the solutions developed here will become widespread worldwide, warding off the specter of civilization diseases for millions of intellectual workers.</p> -->
     </section>
     <section class="container py-2">
       <h2>Hardware</h2>
@@ -76,6 +66,18 @@
                     <h5 class="card-title">Raspbery Pi 4 model B (4GB)</h5>
                     <p class="card-text">This is a bit overkill. I am planning to use RPi0 in next version.</p>
                     <a href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/?variant=raspberry-pi-4-model-b-4gb" class="btn btn-primary stretched-link" target="_blank">Buy <span class="badge text-bg-secondary">US$90</span></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card mb-4" style="width: 100%;">
+                  <img src="https://cdn3.botland.com.pl/49150-pdt_540/raspberry-pi-zero-w-512mb-ram-wifi-bt-41.jpg" class="card-img-top mt-2" alt="Raspberry Pi Zero W 512MB RAM - WiFi + BT 4.1">
+                  <div class="card-body">
+                    <h5 class="card-title">Raspberry Pi Zero W 512MB RAM - WiFi + BT 4.1</h5>
+                    <p class="card-text">Cheaper replacement of RPi4. Still I am missing ETH port.
+                    </p>
+                    <a href="https://botland.com.pl/moduly-i-zestawy-raspberry-pi-zero/8330-raspberry-pi-zero-w-512mb-ram-wifi-bt-41-5904422311513.html" class="btn btn-primary stretched-link" target="_blank">Buy <span class="badge text-bg-secondary">US$21</span></a>
                   </div>
                 </div>
               </div>
@@ -120,6 +122,17 @@
                     <h5 class="card-title">Power supply EPS-35-5 (5V, 6A)</h5>
                     <p class="card-text"></p>
                     <a href="https://www.reichelt.com/pl/en/power-supply-5-v-6-a-eps-35-5-p170940.html" class="btn btn-primary stretched-link" target="_blank">Buy <span class="badge text-bg-secondary">US$17</span></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card mb-4" style="width: 100%;">
+                  <img src="images/H221d5e0c0a714b4797efeeab160bc71fy.jpg" class="card-img-top mt-2" alt="Power supply AC-DC 5V, 2A">
+                  <div class="card-body">
+                    <h5 class="card-title">Power supply AC-DC 5V, 2A </h5>
+                    <p class="card-text">Cheaper & smaller replacement of previuous, expensive power supply. Found on AliExpress.</p>
+                    <a href="https://pl.aliexpress.com/item/10000159007917.html?spm=a2g0o.order_list.order_list_main.244.21ef1c24OHwaqb&gatewayAdapt=glo2pol" class="btn btn-primary stretched-link" target="_blank">Buy <span class="badge text-bg-secondary">US$5</span></a>
                   </div>
                 </div>
               </div>
@@ -281,6 +294,23 @@
       <h2>Software</h2>
       <p>I conducted experiments using both <a href="https://github.com/zentala/open-smart-desk">Node.js</a> (more extensive version) and <a href="https://github.com/zentala/open-smart-desk-python-experiment">Python</a>. While working with Python, I encountered some serious threading issues that I wasn't qualified to solve, so I decided to abandon this approach. In the Node.js version, I ended up with a web interface that replicates the physical controller. It processes data from the laser meter and can switch relays.</p>
       <img src="images/web.png" class="img-fluid mx-auto d-block" alt="Web interface of Open Smart Desk">
+    </section>
+    <section class="container py-2">
+      <h2>Goals and Challenges</h2>
+      <h3>Creating a Seamless and Engaging User Experience</h3>
+      <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
+      <h3>Building a Business Model and Implementing the Solution in the Market</h3>
+      <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
+    </section>
+    <section class="container py-2">
+      <h2>Become a Part of the Working Group!</h2>
+      <p>If you are interested in developing this project, I invite youto join the working group! I have built a prototype of the device that measures time, controls the motors, and has a physical interface (buttons and display). I want to share it so that you can experiment and develop the project with me. Therefore, I provide the hardware project, software, and 3D elements for the casing.</p>
+      <p>I also invite you to <a href="https://discord.gg/7s7P9Kga">join our Discord group</a>, where we can develop this project together.</p>
+      <div class="text-center">
+        <a href="https://discord.com/invite/7s7P9Kga" class="btn btn-primary btn-lg btn-lg m-2" role="button" style="background: #5865f2;">
+          <i class="bi bi-discord"  style="position: relative; top: -1px"></i> Discord
+        </a> 
+      </div>
     </section>
   </main>
 
