Improved SEO, added license info

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Open Smart Desk R&D</title>
+  <meta name="description" content="Open Smart Desk is an innovative, sensor-equipped desk that adjusts its height based on the user's time spent in front of the computer. It aims to promote a healthier lifestyle by encouraging standing work and regular breaks.">
+  <meta name="keywords" content="Open Smart Desk, Height Adjustable Desk, Smart Desk, Health, Posture, Sedentary Lifestyle, Standing Desk, Ergonomics">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
@@ -35,7 +37,8 @@
   
   <main class="container my-5">
     <section class="container py-2">
-      <h3>Mission: Addressing Sedentary Lifestyle - A Health Imperative</h3>
+      <h2>Mission</h2>
+      <h3>Addressing Sedentary Lifestyle - A Health Imperative</h3>
       <p>In the modern world, an increasing number of people are working remotely, spending their work hours in front of a computer. After work, they continue to use computers for shopping, handling administrative matters, and entertainment. Many of us, especially during the COVID-19 pandemic, have experienced spending the entire day in front of a screen, from the moment we wake up until we go to bed. This lifestyle, if unchecked, can lead to health issues.</p>
       <p>A sedentary lifestyle can lead to serious health problems, including spinal and joint diseases, resulting in mobility issues. These civilization diseases not only generate significant costs for the global economy but also cause tremendous inconvenience for those affected.</p>
       <p>Height-adjustable desks were theoretically designed to combat the sedentary lifestyle. However, in practice, many of us don't utilize them to their full potential. We often forget or lack the motivation to change positions, enduring the discomfort that comes with it. This realization inspired the idea for the Open Smart Desk.</p>
@@ -297,15 +300,36 @@
     </section>
     <section class="container py-2">
       <h2>Goals and Challenges</h2>
-      <h3>Creating a Seamless and Engaging User Experience</h3>
-      <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
-      <h3>Building a Business Model and Implementing the Solution in the Market</h3>
-      <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
+      <div class="row">
+        <div class="col">
+          <h3>Creating a Seamless and Engaging User Experience</h3>
+          <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
+        </div>
+        <div class="col">
+          <h3>Building a Community & Ship in on the market</h3>
+          <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
+        </div>
+      </div>
     </section>
     <section class="container py-2">
-      <h2>Become a Part of the Working Group!</h2>
-      <p>If you are interested in developing this project, I invite youto join the working group! I have built a prototype of the device that measures time, controls the motors, and has a physical interface (buttons and display). I want to share it so that you can experiment and develop the project with me. Therefore, I provide the hardware project, software, and 3D elements for the casing.</p>
-      <p>I also invite you to <a href="https://discord.gg/7s7P9Kga">join our Discord group</a>, where we can develop this project together.</p>
+      <h2>Licensing</h2>
+      <p><strong>Open Smart Desk</strong> is an <strong>Open HSP</strong> initiative where everything is open on <a href="#" target="_blank">GPL-3.0 License</a>:</p>
+      <ul>
+        <li><strong>H</strong> (Hardware) stands for projects of electronic boards which you can print yourself</li>
+        <li><strong>S</strong> (Software) stands for ready to use firmware you can use on printed hardware</li>
+        <li><strong>P</strong> (Printables) stands for cases and other plastic elements you can print on a 3D printer and use with our hardware</li>
+      </ul>
+      <p>With all elements in place, you can assemble a complete device. You can use it as-is or fork and modify it for your needs.</p>
+    </section>
+    <section class="container py-2">
+      <h2>Join us!</h2>
+      <h3>Become a Part of the Working Group!</h3>
+      <p>
+        For now I have only built a prototype of the device that measures time, 
+        controls the motors, and has a physical interface (buttons and display). 
+        But it isn't finshed and still requires a lot of experiments, ideas, developement and improvements. 
+      </p>
+      <p class="lead text-center">Join Discord working group<br/>and become part of this journey:</p>
       <div class="text-center">
         <a href="https://discord.com/invite/7s7P9Kga" class="btn btn-primary btn-lg btn-lg m-2" role="button" style="background: #5865f2;">
           <i class="bi bi-discord"  style="position: relative; top: -1px"></i> Discord
@@ -328,6 +352,17 @@
     </div>
   </footer>
 
+  <!-- JS for Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ6M9DBGYJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BZ6M9DBGYJ');
+  </script>
 </body>
 </html>
