Add some Shields in the header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
   <div class="jumbotron jumbotron-fluid text-center" style="background-color: #f8f9fa; border-bottom: 1px solid #eee;">
     <div class="container py-5">
       <div class="row">
+        <p class="text-center">
+          <!-- https://github.com/mkenney/software-guides/blob/master/STABILITY-BADGES.md -->
+          <img src="https://img.shields.io/badge/stability-wip-lightgrey.svg" alt="WIP">
+
+          <!-- https://shields.io/badges/git-hub-repo-stars -->
+          <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/zentala/open-smart-desk">
+
+          <!-- https://shields.io/badges/git-hub-watchers -->
+          <img alt="GitHub watchers" src="https://img.shields.io/github/watchers/zentala/open-smart-desk">
+
+          <!-- https://shields.io/badges/git-hub-forks -->
+          <img alt="GitHub forks" src="https://img.shields.io/github/forks/zentala/open-smart-desk">
+
+          <!-- https://shields.io/badges/git-hub -->
+          <img alt="GitHub" src="https://img.shields.io/github/license/zentala/open-smart-desk">
+        </p>
         <h1 class="display-6" style="font-size: 180%">Public Research & Development Project</h1>
         <h1 class="display-4">Open Smart Height Adjustable Desk</h1>
       </div>
