Add enclosure DXFs

--- a/index.html
+++ b/index.html
@@ -233,6 +233,17 @@
                 </div>
               </div>
 
+              <!-- <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card mb-4" style="width: 100%;">
+                  <img src="images/plexi-cutted.jpg" class="card-img-top mt-2" alt="CNC laser cutted plexiglass">
+                  <div class="card-body">
+                    <h5 class="card-title">CNC laser cutted plexiglass</h5>
+                    <p class="card-text"></p>
+                    <a href="enclosure/v1/plexi_5mm_40x20cm.dxf" class="btn btn-primary stretched-link" target="_blank">Download DXF <span class="badge text-bg-secondary">US$10</span></a>
+                  </div>
+                </div>
+              </div> -->
+
             </div>
 
             <ul style="list-style-type: square;">
@@ -248,7 +259,7 @@
               <!-- <li>C14 male panel socket</li> -->
               <!-- <li>C13 female cable (regular PC power cable)</li> -->
               <!-- <li>microSD card 32GB</li> -->
-              <li>plexi laser cutted enclousre</li>
+              <li>plexi laser cutted enclousre: <a href="enclosure/v1/plexi_5mm_40x20cm.dxf">plexi_5mm_40x20cm.dxf</a> & <a href="enclosure/v1/plexi_smoked_graphite_3mm_9x13.5cm.dxf">plexi_dymiona_grafit_3mm_9x13.5cm.dxf</a></li>
             </ul>
             
           </div>
@@ -259,7 +270,7 @@
       <div class="row">
         <div class="col">
           <img src="images/plexi-cutted.jpg" class="img-fluid" alt="Plexi Cutted">
-          <p class="small">Ordered online, CNC laser cutted plexiglass 4mm for the housing.</p>
+          <p class="small">Ordered online, CNC laser cutted plexiglass 5mm for the housing.</p>
         </div>
         <div class="col">
           <img src="images/wiring.jpg" class="img-fluid" alt="Wiring">
@@ -329,7 +340,7 @@
     </section>
     <section class="container py-2">
       <h2>Licensing</h2>
-      <p><strong>Open Smart Desk</strong> is an <strong>Open HSP</strong> initiative where everything is open on <a href="#" target="_blank">GPL-3.0 License</a>:</p>
+      <p><strong>Open Smart Desk</strong> is an <strong>Open HSP</strong> initiative where everything is open on <a href="https://github.com/zentala/open-smart-desk/blob/master/LICENSE.md" target="_blank">GPL-3.0 License</a>:</p>
       <ul>
         <li><strong>H</strong> (Hardware) stands for projects of electronic boards which you can print yourself</li>
         <li><strong>S</strong> (Software) stands for ready to use firmware you can use on printed hardware</li>
